2nd commitment with some  organization

--- a/FinalProject_Report.Rmd
+++ b/FinalProject_Report.Rmd
@@ -69,6 +69,13 @@ Transportation %>%
 ```
 
 
+```{r}
+
+  Transportation %>%
+  left_join(AirPorts, by = c("Accident.Number" = "NTSB_RPRT_NBR")) 
+
+
+```
 
 
 
